# whisper-node

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_WORKFLOW_TESTS.md  build_app.py  config_example.yaml  demo_complete_workflow.py  docker-compose.yml  final_integration_test.py  install.py  pyproject.toml  quick_workflow_test.py  requirements.txt  setup.py  social_config.yaml  start_server.bat  start_server.sh  test_complete_workflow.py  test_core_functionality.py  test_installation.py  test_request.json  test_subtitle.srt  test_translation_social.py  test_whispercpp_engine.py  test_whisperkit_engine.py  test_youtube_cli.py  test_youtube_download.py  test_youtube_transcribe.py  whisperkit-config.json
.github/workflows/: ci.yml
demo_workflow/: chinese_subtitles.srt  original_subtitles.srt
docs/: task.md
output/: Rick Astley - Never Gonna Give You Up (Official Video) (4K Remaster)_openai_whisper_tiny.srt
quick_test/: original.srt  translated.srt
src/: cmd.md
src/whisper_subtitle/: __init__.py  __main__.py  cli.py
src/whisper_subtitle/api/: __init__.py  main.py
src/whisper_subtitle/cli/: __init__.py  __main__.py  main.py
src/whisper_subtitle/config/: settings.py
src/whisper_subtitle/core/: __init__.py  registry.py  service.py  transcriber.py  transcription.py
src/whisper_subtitle/engines/: __init__.py  alibaba_asr.py  base.py  faster_whisper.py  openai_whisper.py  whisper_cpp.py  whispercpp.py  whisperkit.py
src/whisper_subtitle/services/: __init__.py  social_media.py  translation.py
src/whisper_subtitle/tasks/: __init__.py  scheduler.py  youtube.py  youtube_fetcher.py
src/whisper_subtitle/utils/: __init__.py  (+3 more)
src/whisper_subtitle_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_social_media_service.py  test_translation_service.py
(+19 files in other folders)
